	Version 0.1.8


2008-04-08  Sverker Nilsson  <sverker@sverker-laptop>

	* guppy/gsl/Main.py (find_aspects_inseq): as->as_
	  Several other GSL-related files as -> as_
	  untabified setup.py to look better in pypi
	

	Version 0.1.7

2008-04-07  Sverker Nilsson  <sverker@sverker-laptop>

	* guppy/heapy/test/test_View.py (FirstCasetest_cal_hiding): as->as_

	* guppy/heapy/test/test_UniSet.py (FirstCase): as->asrt

	* guppy/sets/test.py (test_set_operations and others): as->as_

	* guppy/heapy/test/test_Classifiers.py (SpecialCases.test_2): as->asrt

	* guppy/heapy/Classifiers.py (SoKind.__hash__): added

	* For Python 2.6a2 ^^^
	
	* specs/index.gsl: Added commentary in download section
	referringing to svn as source of latest changes esp. 64 bit.
	

	* Added specs/genguppydoc.py, to be able to regenerate docs from
	svn'd files.

2008-04-05  Sverker Nilsson  <sverker@sverker-laptop>

	* guppy/heapy/test/test_Classifiers.py (SpecialCases): 
	Relaxed the timing test in test_alt_retclaset with a factor 2
	from 2 to 4.
	
	* guppy/heapy/test/test_heapyc.py (TestHeapView):
	in test_timing:
	it failed in python2.3 64 bit, I removed the check for now,
	may check into this later...

	* src/sets/bitset.c (bits_first): Removed xxx etc from comment, no 
	problem with being hardcoded for size and now tested with 64 bits.
	(sf_realloc): changed the update of v->lo and v->hi to use better
	defined pointer-arithmetic within allocated arrays. This solved a
	problem with 64 bit mode in (at least) Python 2.4. May be a
	coincidence that it seemed to work with 2.5.

2008-03-17  Sverker Nilsson  <sverker@sverker-laptop>

	* Several files, to make it complie without warnings in 32 bit
	  mode. 
	  NyBit is now defined as Py_intptr_t and limits are calculated
	  a'la pyport.h .

	* src/sets/bitset.h: using __LP64__ macro to indirectly define internal
	  conditional flags, NyBits_32 resp. NyBits_64
	
	*  guppy/heapy/__init__.py : checked sys.maxint to detmine arch