@@ -1,3 +1,12 @@
+2008-04-09  Sverker Nilsson  <sverker@sverker-laptop>
+
+	* MANIFEST: added specs/genguppydoc.py
+
+	* specs/index.gsl: Made it use css, improved table layout for doc
+	and download.
+	Added doc/css/guppy.css
+	
+	
 	Version 0.1.8
 
 
